@@ -1,0 +1,52 @@
+<printer id="printer/HP-OfficeJet_4300">
+  <make>HP</make>
+  <model>OfficeJet 4300</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>4800</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://h10010.www1.hp.com/wwpc/us/en/en/WF05a/18972-238444-236260-12019-236260-90791.html</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:Hewlett-Packard;MDL:Officejet 4300 series;CMD:LDL,MLC,PML,DYN;CLS:PRINTER;</ieee1284>
+      <commandset>LDL,MLC,PML,DYN</commandset>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>Officejet 4300 series</model>
+    </general>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>hplip</driver>
+  <comments>
+    <en>
+
+    Entry level sheet-fed multi-function
+    device. Printer/scanner/copier/fax.&lt;p&gt;
+
+    To get all functionality of this printer working under Linux,
+    especially also the non-printing features, like scanning, printer
+    status, maintenance, and photo download from memory cards, use the
+    &lt;a href=&quot;show_driver.cgi?driver=hplip&quot;&gt;HPLIP
+    driver package from HP&lt;/a&gt;.&lt;p&gt;
+
+    Does not understand PCL as most other DeskJets/PSCs/OfficeJets, it
+    uses the so-called &quot;Lightweight Imaging Device Interface
+    Language&quot; (LIDIL), these printers are supported by the
+    HPLIP driver beginning from version 1.3. The driver
+    supports resolutions only up to 600 dpi, head alignment settings
+    stored in the printer are not made use of, so use a one-cartridge
+    (CMY) printing mode in case of mis-alignments.&lt;p&gt;&lt;p&gt;
+
+      Consumables/Refills: 1 colour (CMY) cartridge and 1 black (K) cartridge&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
