@@ -1,0 +1,48 @@
+<printer id="printer/Samsung-CLP-310">
+  <make>Samsung</make>
+  <model>CLP-310</model>
+  <mechanism>
+    <laser />
+    <color />
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <margins>
+      <general>
+        <unit>mm</unit>
+        <relative />
+        <top>4.23164</top>
+        <left>3.175</left>
+        <right>3.175</right>
+        <bottom>4.23164</bottom>
+      </general>
+    </margins>
+  </mechanism>
+  <url>http://www.samsung.com/Products/PrinterandMultifunction/ColorLaserPrinters/CLP_300NXAA.asp</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <functionality>B</functionality>
+  <driver>splix</driver>
+  <comments>
+    <en>
+
+      The Samsung CLP-310 (USB) is a cheap color laser
+      printer.&lt;p&gt;
+
+      This printer is compatible with the CLP-300 and is supported by
+      the SpliX and foo2qpdl open software printer drivers. SpliX
+      gives a better color output.&lt;p&gt;
+
+      Consumables/Refills: Toner Black (2000 prints) - $54, Toner
+      Yellow (1000 prints) - $45, Toner Magenta (1000 prints) - $45,
+      Toner Cyan (1000 prints) - $45, Waste Toner (5000 prints) - $10,
+      Drum Kit (20000 prints) - $96 Part numbers: CLP-K300A,
+      CLP-Y315A, CLP-M300A, CLP-C300A, CLP-W300A, CLP-R300A&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
