@@ -1,3 +1,10 @@
+2010-07-09  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/HP-OfficeJet_4300.xml: printer/Samsung-CLP-300.xml,
+	  printer/Samsung-CLP-310.xml, printer/Samsung-CLP-315.xml,
+	  printer/Samsung-CLP-610ND.xml, printer/Xerox-Phaser_6110.xml:
+	  Restored printer entries which got lost due to a web server bug.
+
 2010-07-06  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/driver/epson-escpr.xml:
